feat: atualização do cronograma

--- a/patrocinadores.html
+++ b/patrocinadores.html
@@ -94,13 +94,17 @@
             </div>
             <h3>Central Analítica</h3>
           </a>
-          <a href="" target="_blank" class="sponsor-card">
+          <a href="https://scqonline.com/" target="_blank" class="sponsor-card">
             <div class="sponsor-logo">
               <img src="./src/img/sq-logo.png" alt="SC Química" />
             </div>
             <h3>SC Química</h3>
           </a>
-          <a href="https://scqonline.com/" target="_blank" class="sponsor-card">
+          <a
+            href="https://www.importnow.com.br/"
+            target="_blank"
+            class="sponsor-card"
+          >
             <div class="sponsor-logo">
               <img src="./src/img/importnow-logo.gif" alt="ImportNow" />
             </div>
