--- a/programacao.html
+++ b/programacao.html
@@ -66,16 +66,16 @@
               <td class="stick-column">9:00</td>
               <td>Abertura</td>
               <td rowspan="3">
-                Minicurso 1 <br /><br />
-                Minicurso 2
+                <a href="./minicursos.html#mc1">Minicurso 1</a> <br /><br />
+                <a href="./minicursos.html">Minicurso 2</a>
               </td>
               <td rowspan="3">
-                Minicurso 1 <br /><br />
-                Minicurso 2
+                <a href="./minicursos.html#mc1">Minicurso 1</a> <br /><br />
+                <a href="./minicursos.html">Minicurso 2</a>
               </td>
               <td rowspan="3">
-                Minicurso 1 <br /><br />
-                Minicurso 2
+                <a href="./minicursos.html#mc1">Minicurso 1</a> <br /><br />
+                <a href="./minicursos.html">Minicurso 2</a>
               </td>
               <td rowspan="3">
                 <a href="#mesa1">Mesa-redonda 1</a> <br /><br />
@@ -110,16 +110,16 @@
               <td class="stick-column">14:00</td>
               <td rowspan="4"><a href="#workshop2">Workshop 2</a></td>
               <td rowspan="4">
-                Minicurso 3 <br /><br />
-                Minicurso 4
+                <a href="./minicursos.html#mc3">Minicurso 3</a> <br /><br />
+                <a href="./minicursos.html#mc4">Minicurso 4</a>
               </td>
               <td rowspan="4">
-                Minicurso 3 <br /><br />
-                Minicurso 4
+                <a href="./minicursos.html#mc3">Minicurso 3</a> <br /><br />
+                <a href="./minicursos.html#mc4">Minicurso 4</a>
               </td>
               <td rowspan="4">
-                Minicurso 3 <br /><br />
-                Minicurso 4
+                <a href="./minicursos.html#mc3">Minicurso 3</a> <br /><br />
+                <a href="./minicursos.html#mc4">Minicurso 4</a>
               </td>
               <td rowspan="3"><a href="#workshop3">Workshop 3</a></td>
             </tr>
@@ -164,7 +164,9 @@
           </table>
         </div>
         <br />
+        <hr />
         <div class="more-info">
+          <br />
           <h2>Workshops</h2>
           <div class="info-card">
             <h3 id="workshop1">
@@ -209,6 +211,7 @@
             </p>
           </div>
         </div>
+        <hr />
         <div class="more-info">
           <h2>Mesas-rendondas</h2>
           <div class="info-card">
