--- a/minicursos.html
+++ b/minicursos.html
@@ -69,7 +69,7 @@
               />
             </div>
             <div class="talker-text">
-              <h3 class="title">
+              <h3 class="title" id="mc1">
                 <strong>MC1:</strong> Singlet Oxygen as a Tool for Biomolecular
                 Ligations
               </h3>
@@ -122,7 +122,7 @@
               />
             </div>
             <div class="talker-text">
-              <h3 class="title">
+              <h3 class="title" id="mc3">
                 <strong>MC3:</strong> Development of membranes and electrodes
                 for alkaline electrolysis at DTU Energy
               </h3>
@@ -162,7 +162,7 @@
               />
             </div>
             <div class="talker-text">
-              <h3 class="title">
+              <h3 class="title" id="mc4">
                 <strong>MC4:</strong> High-Throughput Experimentation as an
                 enabling technology for Organic Synthesis
               </h3>
