feat: responsividade do menu e página de contato

--- a/patrocinadores.html
+++ b/patrocinadores.html
@@ -39,7 +39,12 @@
       </div>
     </header>
     <nav>
-      <ul>
+      <div id="burguer-icon" class="">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <ul id="menu-options" class="">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./historia.html">História</a></li>
         <li><a href="./programacao.html">Programação</a></li>
@@ -118,5 +123,7 @@
       <p>Rodovia Washington Luis, km 235 - São Carlos - SP - BR</p>
       <p><a href="mailto:evq@ufscar.br">evq@ufscar.br</a></p>
     </footer>
+
+    <script src="./src/js/menu.js"></script>
   </body>
 </html>
