--- a/programacao.html
+++ b/programacao.html
@@ -39,7 +39,12 @@
       </div>
     </header>
     <nav>
-      <ul>
+      <div id="burguer-icon" class="">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <ul id="menu-options" class="">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./historia.html">História</a></li>
         <li><a href="./programacao.html">Programação</a></li>
@@ -53,6 +58,7 @@
       <div class="content">
         <h2>Programação</h2>
         <div class="program-table">
+          <span>Interaja com a tabela para mains informações!</span>
           <table>
             <tr>
               <th class="stick-column">Horário</th>
@@ -66,16 +72,40 @@
               <td class="stick-column">9:00</td>
               <td>Abertura</td>
               <td rowspan="3">
-                <a href="./minicursos.html#mc1">Minicurso 1</a> <br /><br />
-                <a href="./minicursos.html">Minicurso 2</a>
+                <a href="./minicursos.html#mc1"
+                  ><abbr
+                    title="Singlet Oxygen as a Tool for Biomolecular Ligations"
+                    >Minicurso 1</abbr
+                  ></a
+                >
+                <br /><br />
+                <a href="./minicursos.html"
+                  ><abbr title="a Confirmar!">Minicurso 2</abbr></a
+                >
               </td>
               <td rowspan="3">
-                <a href="./minicursos.html#mc1">Minicurso 1</a> <br /><br />
-                <a href="./minicursos.html">Minicurso 2</a>
+                <a href="./minicursos.html#mc1"
+                  ><abbr
+                    title="Singlet Oxygen as a Tool for Biomolecular Ligations"
+                    >Minicurso 1</abbr
+                  ></a
+                >
+                <br /><br />
+                <a href="./minicursos.html"
+                  ><abbr title="a Confirmar!">Minicurso 2</abbr></a
+                >
               </td>
               <td rowspan="3">
-                <a href="./minicursos.html#mc1">Minicurso 1</a> <br /><br />
-                <a href="./minicursos.html">Minicurso 2</a>
+                <a href="./minicursos.html#mc1"
+                  ><abbr
+                    title="Singlet Oxygen as a Tool for Biomolecular Ligations"
+                    >Minicurso 1</abbr
+                  ></a
+                >
+                <br /><br />
+                <a href="./minicursos.html"
+                  ><abbr title="a Confirmar!">Minicurso 2</abbr></a
+                >
               </td>
               <td rowspan="3">
                 <a href="#mesa1">Mesa-redonda 1</a> <br /><br />
@@ -110,16 +140,49 @@
               <td class="stick-column">14:00</td>
               <td rowspan="4"><a href="#workshop2">Workshop 2</a></td>
               <td rowspan="4">
-                <a href="./minicursos.html#mc3">Minicurso 3</a> <br /><br />
-                <a href="./minicursos.html#mc4">Minicurso 4</a>
+                <a href="./minicursos.html#mc3"
+                  ><abbr
+                    title="Development of membranes and electrodes for alkaline electrolysis at DTU Energy"
+                    >Minicurso 3</abbr
+                  ></a
+                >
+                <br /><br />
+                <a href="./minicursos.html#mc4"
+                  ><abbr
+                    title="High-Throughput Experimentation as an enabling technology for Organic Synthesis"
+                    >Minicurso 4</abbr
+                  ></a
+                >
               </td>
               <td rowspan="4">
-                <a href="./minicursos.html#mc3">Minicurso 3</a> <br /><br />
-                <a href="./minicursos.html#mc4">Minicurso 4</a>
+                <a href="./minicursos.html#mc3"
+                  ><abbr
+                    title="Development of membranes and electrodes for alkaline electrolysis at DTU Energy"
+                    >Minicurso 3</abbr
+                  ></a
+                >
+                <br /><br />
+                <a href="./minicursos.html#mc4"
+                  ><abbr
+                    title="High-Throughput Experimentation as an enabling technology for Organic Synthesis"
+                    >Minicurso 4</abbr
+                  ></a
+                >
               </td>
               <td rowspan="4">
-                <a href="./minicursos.html#mc3">Minicurso 3</a> <br /><br />
-                <a href="./minicursos.html#mc4">Minicurso 4</a>
+                <a href="./minicursos.html#mc3"
+                  ><abbr
+                    title="Development of membranes and electrodes for alkaline electrolysis at DTU Energy"
+                    >Minicurso 3</abbr
+                  ></a
+                >
+                <br /><br />
+                <a href="./minicursos.html#mc4"
+                  ><abbr
+                    title="High-Throughput Experimentation as an enabling technology for Organic Synthesis"
+                    >Minicurso 4</abbr
+                  ></a
+                >
               </td>
               <td rowspan="3"><a href="#workshop3">Workshop 3</a></td>
             </tr>
@@ -248,5 +311,7 @@
       <p>Rodovia Washington Luis, km 235 - São Carlos - SP - BR</p>
       <p><a href="mailto:evq@ufscar.br">evq@ufscar.br</a></p>
     </footer>
+
+    <script src="./src/js/menu.js"></script>
   </body>
 </html>
