--- a/contato.html
+++ b/contato.html
@@ -26,6 +26,14 @@
 
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/contact.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
@@ -38,7 +46,12 @@
       </div>
     </header>
     <nav>
-      <ul>
+      <div id="burguer-icon" class="">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <ul id="menu-options" class="">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./historia.html">História</a></li>
         <li><a href="./programacao.html">Programação</a></li>
@@ -51,7 +64,36 @@
     <main>
       <div class="content">
         <h2>Contato</h2>
-        <p><i>Em breve!</i></p>
+        <p>
+          Para dúvidas e informações, entre em contato conosco através do e-mail
+          ou do nosso Instagram:
+        </p>
+        <div class="buttons">
+          <a
+            class="button"
+            href="mailto:evq@ufscar.br?subject=Dúvidas"
+            target="_blank"
+            ><i class="fa-regular fa-envelope"></i><span>evq@ufscar.br</span></a
+          >
+          <a
+            class="button"
+            href="https://www.instagram.com/evq2026/"
+            target="_blank"
+            ><i class="fa-brands fa-instagram"></i><span>@evq2026</span></a
+          >
+        </div>
+        <br />
+        <br />
+        <hr />
+        <br />
+        <h2>Mapa</h2>
+        <div class="mapa">
+          <iframe
+            src="https://www.google.com/maps/d/u/1/embed?mid=1RainNyB0kkcBMEwqocOzyvw6_BZFm6Y&ehbc=2E312F&noprof=1"
+            width="640"
+            height="480"
+          ></iframe>
+        </div>
       </div>
     </main>
     <footer>
@@ -59,5 +101,7 @@
       <p>Rodovia Washington Luis, km 235 - São Carlos - SP - BR</p>
       <p><a href="mailto:evq@ufscar.br">evq@ufscar.br</a></p>
     </footer>
+
+    <script src="./src/js/menu.js"></script>
   </body>
 </html>
